# bhaktiastro

./: .env.example  .gitignore  CALCULATIONS.md  CHANGELOG.md  CODEX_INSTRUCTIONS.md  DECISIONS.md  FEATURES_v3.md  LICENSE  PROJECT_PHASES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  logging.py  main.py
backend/tests/: interpretation_test_helpers.py  test_api_dasha.py  test_api_kundali.py  test_api_panchang.py  test_arudha_lagna.py  test_ashtakavarga_foundation.py  test_ashtakavarga_summary.py  test_ashtakavarga_validation_regression.py  test_ayanamsa.py  test_bhava.py  test_bhava_cusps.py  test_bhinnashtakavarga_calculation.py  test_bhinnashtakavarga_rules.py  test_career_rules.py  test_chesta_bala.py  test_children_rules.py  test_combustion.py  test_dasha_antardasha.py  test_dasha_balance.py  test_dasha_builder.py  test_dasha_constants.py  test_dasha_current.py  test_dasha_pratyantardasha.py  test_dasha_regression.py  test_dasha_schema.py  test_dasha_timeline.py  test_dhana_yoga.py  test_dig_bala.py  test_dignity.py  test_drik_bala.py  test_drishti.py  test_education_rules.py  test_ephemeris.py  test_finance_rules.py  test_gajakesari.py  (+87 more)
docs/: ACCURACY.md  API.md  CODEX_INSTRUCTIONS.md  KUNDALI_SPRINT_4.md  MASTER.md  ROADMAP.md  SPRINT-05.md  SPRINT-06.md  SPRINT-07.md  SPRINT-08.md  SPRINT-09.md  SPRINT-10A.md  SPRINT-10B.md  SPRINT-11.md  SPRINT-12.md  SPRINT-13.md  SPRINT-14.md  SPRINT-15.md  VALIDATION_PLAN.md  prediction_rules.md  sprint-11-one-by-one-codex-runner.md
scripts/: smoke_panchang.py
(+145 files in other folders)
